// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiLoadingChart is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiLoadingChart testClass1 testClass2 euiLoadingChart--medium"
  data-test-subj="test subject string"
>
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
</span>
`;

exports[`EuiLoadingChart mono is rendered 1`] = `
<span
  class="euiLoadingChart euiLoadingChart--mono euiLoadingChart--medium"
>
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
</span>
`;

exports[`EuiLoadingChart size l is rendered 1`] = `
<span
  class="euiLoadingChart euiLoadingChart--large"
>
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
</span>
`;

exports[`EuiLoadingChart size m is rendered 1`] = `
<span
  class="euiLoadingChart euiLoadingChart--medium"
>
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
</span>
`;

exports[`EuiLoadingChart size xl is rendered 1`] = `
<span
  class="euiLoadingChart euiLoadingChart--xLarge"
>
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
  <span
    class="euiLoadingChart__bar"
  />
</span>
`;
